<resources>
    <string name="app_name">AddmissionApp223</string>
    <string name="menu_sc_mohit">Designed by K. Sai Mohit Kumar 20191CSE0223</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="reg_no">Registration no</string>
    <string name="mark_p">Marks in Physics</string>
    <string name="mark_c">Marks in Chemistry</string>
    <string name="mark_m">Marks in Math</string>
    <string name="state">Select State</string>
    <string name="avg_60_pec">Student with average marks above 60%</string>
    <string-array name="states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
</resources>